# wf-session-systemd

./: README.md  example.ini  meson.build
data/: meson.build  wf-session-systemd-startup
data/systemd/: meson.build  wf-session.service.in  wf-session@.target.in
metadata/: meson.build  services.xml  systemd.xml
src/: component-manager.cpp  component-manager.hpp  component.cpp  component.hpp  config-manager.hpp  gtk-manager.cpp  gtk-manager.hpp  main.cpp  meson.build  session-manager.cpp  session-manager.hpp  wf-option-wrap.hpp
